--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@
 }
 
 /* this is the topbar */
-.css-ilb8f5 {
+.css-1eyqeok {
 	height: 75px;
 	background-color: var(--topbar-bg-color);
 	background-image: none;
@@ -170,7 +170,7 @@ ul {
 }
 
 /* active drop down option */
-.css-689db5{
+.css-1mzm8su{
 	background: var(--dropdown-hover-color) !important;
 }
 
