final changes, syling simplification and argument for theme

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -14,6 +14,8 @@
 	--accordion-text-color: #FFFFFF;
 	--dropdown-hover-color: rgba(255, 255, 255, 0.1);
 	--accordion-bg-color: #23242B;
+	--accordion-expand-bg-color: #1B1C1E;
 	--max-width: 500px;
 	--button-color: #0055B9;
+	--button-text-color: #FFFFFF;
 }
